--- a/src/main/webapp/css/join.css
+++ b/src/main/webapp/css/join.css
@@ -1,9 +1,13 @@
 @charset "UTF-8";
-#content-form{
+#content-form *{
 	margin:0;
 	padding:0;
 	box-sizing:border-box;
-	font-family: 'Noto Serif KR', serif;
+	font-family: 'Pretendard-Regular', 'sans-serif';
+}
+body{
+	margin:0;
+	padding:0;
 }
 li{
 	list-style:none;
