--- a/src/main/webapp/css/footer.css
+++ b/src/main/webapp/css/footer.css
@@ -1,15 +1,9 @@
-@charset "UTF-8";
-@font-face {
-    font-family: 'Pretendard-Regular';
-    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
+@charset "UTF-8";}
 #footer *{
 	margin:0;
 	padding:0;
 	box-sizing:border-box;
-	font-family: 'Pretendard-Regular', 'sans-serif';
+	font-family: 'Pretendard';
 	text-align:center;
 }
 #footer li{
