--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -1,16 +1,10 @@
 @charset "UTF-8";
-@font-face {
-    font-family: 'Pretendard-Regular';
-    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
 #header *{
 	margin:0;
 	padding:0;
 	box-sizing:border-box;
-	font-family: 'Pretendard-Regular', 'sans-serif';
 	text-align:center;
+	font-family: 'Pretendard';
 }
 #header li{
 	list-style:none;
