--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -30,6 +30,9 @@ body{
 	height:50px;
 	line-height: 50px;
 }
+#header .top-bar .point-font{
+	font-weight:600;
+}
 #header .top-bar div a{
 	color:#fff;
 }
@@ -59,6 +62,8 @@ body{
 }
 #header .header-top .header-inner .inner{
 	position:relative;
+	width: 1250px;
+    margin: 0 auto;
 }
 #header .header-top .header-inner .inner .logo{
 	display: inline-block;
@@ -97,6 +102,8 @@ body{
     justify-content: space-between;
     font-size: 18px;
     font-weight: 500;
+    width: 1250px;
+    margin: 0 auto;
 }
 #header .header-top .header-bottom .gnb .gnb-left{
 	line-height:60px;
